<resources>
    <string name="app_name">School Management System</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.
    </string>
    <string name="admin_login">Admin Login</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="student_login">Student Login</string>
    <string name="valid_email">Enter Valid Email</string>
    <string name="valid_password">Enter Valid Password</string>
    <string name="email_not_exist">Email not exist</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="select_login_type">Choose Login</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="msgLogout">Do you want to logout ?</string>
    <string name="profile">Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="hint_conf_new_password">Confirm new password</string>
    <string name="password_notmatching">Passwords not matching</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="password_update_fail">Failed to update password</string>
    <string name="update_profile">Update Profile</string>
    <string name="new_name">Name</string>
    <string name="new_mobile">Mobile Number</string>
    <string name="new_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="profile_update_success">Profile details updated successfully</string>
    <string name="profile_update_failed">Update Failed</string>
    <string name="male">Male</string>
    <string name="btn_add_student">Add</string>
    <string name="addTeacher">Add Teacher</string>
    <string name="addStudent">Add Student</string>
    <string name="valid_name">Enter valid name</string>
    <string name="valid_mobile">Enter valid mobile</string>
    <string name="created_success">created successfully</string>
    <string name="user_creation_fail">Failed to create</string>
    <string name="valid_login_page">Please select valid login page</string>
    <string name="please_select">Please select</string>
    <string name="login_page">login page</string>
    <string name="profile_create_success">profile created successfully</string>
    <string name="password">Password</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>
    <string name="need_read_store_perm">Permission required to do the functionalty.</string>
    <string name="profile_image_success">Profile image uploaded successfully</string>
    <string name="profile_image_failed">Profile image update failed</string>
    <string name="enter_message">Enter message</string>
    <string name="sent">Sent</string>
    <string name="failToSend">Failed to send</string>
    <string name="groupchat">Group Chat</string>
    <string name="add_event">Add Event</string>
    <string name="eventMessage">Event Message</string>
    <string name="add_image">Add Image</string>
    <string name="event_update_success">Event added successully</string>
    <string name="event_update_failed">Event update failed</string>
    <string name="events">Events</string>
    <string name="posted_a_event">Posted an event</string>
    <string name="delete_account">Delete Account</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="areYouSure">Are you sure ?</string>
    <string name="account_delete_message">Account deleted, please contact admin to create new</string>
    <string name="addAdmin">Add Admin</string>
    <string name="addCource">Add Course</string>
    <string name="upload">Upload</string>
    <string name="add_material">Add Material</string>
    <string name="choose_class">Choose class</string>
    <string name="select_class">Please select class</string>
    <string name="select_file">Select File</string>
    <string name="file_update_success">Uploaded Successfully</string>
    <string name="file_update_failed">Upload failed</string>
    <string name="first_class">1st Class</string>
    <string name="sec_class">2nd Class</string>
    <string name="third_class">3rd Class</string>
    <string name="four_class">4th Class</string>
    <string name="five_class">5th Class</string>
    <string name="six_class">6th Class</string>
    <string name="seven_class">7th Class</string>
    <string name="eight_class">8th Class</string>
    <string name="nine_class">9th Class</string>
    <string name="ten_class">10th Class</string>
    <string name="file_desc">File Description</string>
    <string name="enter_desc">Please enter description</string>
    <string name="materials">Materials</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_update_class">Select/Update Class</string>
    <string name="update_class_student">Class updated to student</string>
    <string name="class_not_assigned">Class not assigned</string>

    <string name="firebase_notification_title_template">Firebase: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="firebase_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat
        velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed
        nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="notification">Notification</string>
</resources>
