<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    style="@style/fontRegular"
                    android:id="@+id/etAddEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white" android:importantForAutofill="no"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    style="@style/fontRegular"
                    android:id="@+id/etAddPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white" android:importantForAutofill="no"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    style="@style/fontRegular"
                    android:id="@+id/etAddName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/new_name"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" android:importantForAutofill="no"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    style="@style/fontRegular"
                    android:id="@+id/etAddMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/new_mobile"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" android:importantForAutofill="no"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_marginTop="@dimen/_15dp"
                android:textSize="@dimen/_20sp"
                android:layout_gravity="start"
                android:text="@string/new_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioGroup android:id="@+id/rgAddGender" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_10dp">
            <RadioButton android:id="@+id/rbAddMale" android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/male" android:textSize="@dimen/_20sp"/>
            <RadioButton android:id="@+id/rbAddFemale" android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/female" android:textSize="@dimen/_20sp"/>
        </RadioGroup>

        <Button
                android:id="@+id/btnAdd"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_add_student"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBarAdd"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>