<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:background="@color/colorPrimary"
                                                 android:fitsSystemWindows="true">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                    android:layout_marginBottom="@dimen/_20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/rlImageUpload"
                        android:layout_width="@dimen/_150dp"
                        android:layout_height="@dimen/_150dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/imgProfile"
                            android:layout_width="@dimen/_150dp"
                            android:layout_height="@dimen/_150dp"
                            app:civ_border_width="@dimen/_2dp"
                            app:civ_border_color="@color/colorAccent"/>

                </RelativeLayout>

                <Button
                        android:layout_gravity="bottom"
                        style="@style/fontLight"
                        android:textAllCaps="false"
                        android:id="@+id/btnUploadProfileImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_profile"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        style="@style/fontRegular"
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_20dp"
                        android:hint="@string/new_name"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" android:importantForAutofill="no"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        style="@style/fontRegular"
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_20dp"
                        android:hint="@string/new_mobile"
                        android:inputType="phone"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" android:importantForAutofill="no"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:layout_marginTop="@dimen/_15dp"
                    android:textSize="20sp"
                    android:layout_gravity="left"
                    android:text="@string/new_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioGroup android:id="@+id/rgGender" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" android:layout_gravity="left"
                        android:layout_marginTop="@dimen/_10dp">
                <RadioButton android:id="@+id/rbMale" android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/male" android:textSize="@dimen/_20sp"/>
                <RadioButton android:id="@+id/rbFemale" android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/female" android:textSize="@dimen/_20sp"/>
            </RadioGroup>
            <!-- Login Button -->

            <Button
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@color/colorAccent"
                    android:text="@string/update_profile"
                    android:textColor="@android:color/black"/>

        </LinearLayout>
    </ScrollView>
    <ProgressBar
            android:id="@+id/progressBarCP"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20dp"
            android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
