<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:background="@color/colorPrimary"
                                                 android:fitsSystemWindows="true">

    <LinearLayout
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/new_pass"
                    android:inputType="textPassword"
                    style="@style/fontRegular"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" android:importantForAutofill="no"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    style="@style/fontRegular"
                    android:id="@+id/etConfNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/hint_conf_new_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
                style="@style/fontRegular"
                android:id="@+id/btnChgPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccent"
                android:text="@string/change_password"
                android:textColor="@android:color/black"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBarCP"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20dp"
            android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
