<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp">

            <TextView
                    android:textSize="18sp"
                    style="@style/fontMedium"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/icEventImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <ImageView
                    android:id="@+id/addImage"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etAddEventMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/eventMessage"
                    android:inputType="text"
                    style="@style/fontRegular"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:importantForAutofill="no"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                style="@style/fontRegular"
                android:id="@+id/btnAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccent"
                android:text="@string/add_event"
                android:textColor="@android:color/black"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBarCP"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20dp"
            android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
